# haskell-frontend

./: .gitignore  LICENSE  README.md  cabal.project  default.nix  haskell-frontend.cabal  nixpkgs.nix  package.nix  shell.nix
dev/: Main.hs  update-dep
exe/: Main.hs
nix/: ghcjs-dev-server-rev.txt  ghcjs-dev-server-sha.txt  ghcjs-dev-server.nix  miso-rev.txt  miso-sha.txt  miso-style-rev.txt  miso-style-sha.txt  miso-style.nix  miso.nix  nixpkgs-rev.txt  nixpkgs-sha.txt
nix-revisions/: ghcjs-dev-server.json  miso-style.json
src/: HaskellFrontend.hs  Main.hs
