name:                haskell-frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-frontend
  main-is:
    Main.hs
  build-depends:
    base >=4.8 && <4.9,
    miso,
    miso-style,
    ghcjs-dev-client
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
