cabal-version: 2.2
name: haskell-frontend
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Brad Parker
maintainer: hi@bradparker.com
build-type: Simple

executable haskell-frontend
  main-is:
    Main.hs
  build-depends:
    base >=4.11 && <4.12,
    jsaddle-warp,
    miso
  hs-source-dirs:
    src
  default-language:
    Haskell2010
